修改XMLUtil